--- a/chatReact/server/package.json
+++ b/chatReact/server/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.17.1",
+    "i": "^0.3.7",
     "nodemon": "^2.0.2",
     "socketio": "^1.0.0"
   }
